Migrate from JUnit 4 to JUnit 5 across all test classes, remove junit-vintage-engine dependency, and update assertions accordingly