@@ -3,20 +3,18 @@ package com.smockin.admin.service;
 import com.smockin.admin.dto.ApiImportDTO;
 import com.smockin.admin.dto.MockImportConfigDTO;
 import com.smockin.admin.dto.RestfulMockDTO;
-import com.smockin.admin.exception.RecordNotFoundException;
+import com.smockin.admin.exception.MockImportException;
 import com.smockin.admin.exception.ValidationException;
 import com.smockin.admin.persistence.entity.SmockinUser;
 import com.smockin.admin.persistence.enums.RestMethodEnum;
 import com.smockin.admin.service.utils.RestfulMockServiceUtils;
 import com.smockin.admin.service.utils.UserTokenServiceUtils;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.mock.web.MockMultipartFile;
 
 import java.nio.charset.StandardCharsets;
@@ -25,11 +23,8 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
-@RunWith(MockitoJUnitRunner.class)
-public class OpenApiImportServiceTest {
-
-    @Rule
-    public ExpectedException expected = ExpectedException.none();
+@ExtendWith(MockitoExtension.class)
+class OpenApiImportServiceTest {
 
     @Mock
     private RestfulMockService restfulMockService;
@@ -51,15 +46,15 @@ public class OpenApiImportServiceTest {
 
     private final String token = "test-token";
 
-    @Before
-    public void setUp() throws RecordNotFoundException {
-        when(userTokenServiceUtils.loadCurrentActiveUser(token)).thenReturn(user);
-        when(user.getSessionToken()).thenReturn("session-token");
+    @BeforeEach
+    void setUp() {
+        lenient().when(userTokenServiceUtils.loadCurrentActiveUser(anyString())).thenReturn(user);
+        lenient().when(user.getSessionToken()).thenReturn("session-token");
     }
 
     @Test
-    public void importApiDoc_FullFlow_Success_Test() throws Exception {
-        // Cenário: OpenAPI com múltiplos métodos, caminhos com variáveis e schemas complexos
+    void importApiDoc_FullFlow_Success_Test() throws Exception {
+        // Scenario: OpenAPI with complex schema, variables in path and headers
         String openApiContent = """
                 openapi: 3.0.0
                 info:
@@ -90,28 +85,28 @@ public class OpenApiImportServiceTest {
         MockMultipartFile file = new MockMultipartFile("file", "api.yaml", "text/yaml", openApiContent.getBytes(StandardCharsets.UTF_8));
         ApiImportDTO dto = new ApiImportDTO(file, new MockImportConfigDTO());
 
-        // Ação
+        // Action
         openApiImportService.importApiDoc(dto, token);
 
-        // Verificações
-        verify(restfulMockService).createEndpoint(restfulMockDTOCaptor.capture(), eq("session-token"));
-
+        // Assertions
+        verify(restfulMockService).createEndpoint(restfulMockDTOCaptor.capture(), anyString());
         RestfulMockDTO captured = restfulMockDTOCaptor.getValue();
-        Assert.assertEquals("/users/:id", captured.getPath());
-        Assert.assertEquals(RestMethodEnum.GET, captured.getMethod());
-        Assert.assertEquals(1, captured.getDefinitions().size());
 
-        var definition = captured.getDefinitions().getFirst();
-        Assert.assertEquals(200, definition.getHttpStatusCode());
-        Assert.assertEquals("100", definition.getResponseHeaders().get("X-Rate-Limit"));
-        // Verifica se o corpo foi gerado a partir do schema (resolveBodyFromSchema)
-        Assert.assertTrue(definition.getResponseBody().contains("\"id\":0"));
-        Assert.assertTrue(definition.getResponseBody().contains("\"name\":\"string\""));
+        Assertions.assertEquals("/users/:id", captured.getPath());
+        Assertions.assertEquals(RestMethodEnum.GET, captured.getMethod());
+        Assertions.assertEquals(1, captured.getDefinitions().size());
+
+        var definition = captured.getDefinitions().get(0);
+        Assertions.assertEquals(200, definition.getHttpStatusCode());
+        Assertions.assertEquals("100", definition.getResponseHeaders().get("X-Rate-Limit"));
+        // Verify body generation from schema
+        Assertions.assertTrue(definition.getResponseBody().contains("\"id\":0"));
+        Assertions.assertTrue(definition.getResponseBody().contains("\"name\":\"string\""));
     }
 
     @Test
-    public void importApiDoc_WithRefSchema_Test() throws Exception {
-        // Cenário: Testar a resolução de referências ($ref) e recursão
+    void importApiDoc_WithRefSchema_Test() throws Exception {
+        // Scenario: Test reference resolution ($ref)
         String openApiContent = """
                 openapi: 3.0.0
                 paths:
@@ -139,12 +134,38 @@ public class OpenApiImportServiceTest {
         openApiImportService.importApiDoc(dto, token);
 
         verify(restfulMockService).createEndpoint(restfulMockDTOCaptor.capture(), anyString());
-        Assert.assertTrue(restfulMockDTOCaptor.getValue().getDefinitions().getFirst().getResponseBody().contains("123"));
+        Assertions.assertTrue(restfulMockDTOCaptor.getValue().getDefinitions().get(0).getResponseBody().contains("123"));
     }
 
     @Test
-    public void importApiDoc_ServiceException_Handled_Test() throws Exception {
-        // Cenário: Garantir que erros na criação do endpoint não interrompam o loop (apenas logam erro)
+    void importApiDoc_ArraySchema_Test() throws Exception {
+        // Scenario: Test handling of ArraySchema in response body
+        String openApiContent = """
+                openapi: 3.0.0
+                paths:
+                  /items:
+                    get:
+                      responses:
+                        '200':
+                          content:
+                            application/json:
+                              schema:
+                                type: array
+                                items:
+                                  type: string
+                                  example: "test-item"
+                """;
+
+        MockMultipartFile file = new MockMultipartFile("file", "array.yaml", "text/yaml", openApiContent.getBytes(StandardCharsets.UTF_8));
+        openApiImportService.importApiDoc(new ApiImportDTO(file, new MockImportConfigDTO()), token);
+
+        verify(restfulMockService).createEndpoint(restfulMockDTOCaptor.capture(), anyString());
+        Assertions.assertEquals("[\"test-item\"]", restfulMockDTOCaptor.getValue().getDefinitions().get(0).getResponseBody());
+    }
+
+    @Test
+    void importApiDoc_ServiceException_Handled_Test() throws Exception {
+        // Scenario: Internal error creating endpoint should not stop the process but log error
         String openApiContent = """
                 openapi: 3.0.0
                 paths:
@@ -155,20 +176,42 @@ public class OpenApiImportServiceTest {
                           description: ok
                 """;
 
-        when(restfulMockService.createEndpoint(any(), anyString())).thenThrow(new RuntimeException("DB Error"));
+        doThrow(new RuntimeException("Database Error")).when(restfulMockService).createEndpoint(any(), anyString());
 
         MockMultipartFile file = new MockMultipartFile("file", "api.yaml", "text/yaml", openApiContent.getBytes(StandardCharsets.UTF_8));
         openApiImportService.importApiDoc(new ApiImportDTO(file, new MockImportConfigDTO()), token);
 
-        // Verifica que tentou criar, mesmo que tenha falhado internamente no parsePaths
         verify(restfulMockService, times(1)).createEndpoint(any(), anyString());
     }
 
     @Test
-    public void importApiDoc_ValidationFailure_Test() throws Exception {
-        expected.expect(ValidationException.class);
-        expected.expectMessage("Invalid import data");
-
-        openApiImportService.importApiDoc(new ApiImportDTO(null, null), token);
+    void importApiDoc_ValidationFailure_Test() {
+        // Scenario: Null DTO should throw ValidationException
+        final ValidationException ex = Assertions.assertThrows(ValidationException.class,
+                () -> openApiImportService.importApiDoc(new ApiImportDTO(null, null), token));
+        Assertions.assertEquals("Invalid import data", ex.getMessage());
     }
+
+    @Test
+    void importApiDoc_ParsingError_Test() {
+        // Scenario: An invalid OpenAPI format should throw MockImportException
+        MockMultipartFile file = new MockMultipartFile("file", "invalid.yaml", "text/yaml", "invalid: content: :".getBytes());
+        ApiImportDTO dto = new ApiImportDTO(file, new MockImportConfigDTO());
+
+        final MockImportException ex = Assertions.assertThrows(MockImportException.class,
+                () -> openApiImportService.importApiDoc(dto, token));
+        Assertions.assertEquals("Error parsing OpenAPI file", ex.getMessage());
+    }
+
+    @Test
+    void importApiDoc_EmptyFile_Test() {
+        // Scenario: MultiPartFile with no original filename
+        MockMultipartFile file = new MockMultipartFile("file", null, "text/yaml", "".getBytes());
+        ApiImportDTO dto = new ApiImportDTO(file, new MockImportConfigDTO());
+
+        final MockImportException ex = Assertions.assertThrows(MockImportException.class,
+                () -> openApiImportService.importApiDoc(dto, token));
+        Assertions.assertTrue(ex.getMessage().startsWith("Error during import:"));
+    }
+
 }
